# enable-dependabot-auto-merge

./: README.md  pyproject.toml
src/: main.py
