[tool.poetry]
name = "Enable Dependabot Auto-Merge"
version = "0.1.1"
description = "This Python script automates several GitHub repository management tasks, including cloning a repository, setting up a workflow for Dependabot auto-merges."
authors = ["BeneKenobi <1708125+BeneKenobi@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
GitPython = "^3.1.41"
PyYAML = "^6.0.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
